fixed small spacing issue in mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ away from the edge so they can round properly*/
 
 .spacing{
     margin:10px;
+    margin-top: 0px;
 }
 
 h2{
@@ -52,8 +53,8 @@ h2{
 nav{
     display: flex;
     flex-flow: column;
-    height: 130px;
     justify-content: space-between;
+    height: 145px;
 }
 
 h1{
